feat(artist): add repository that handles multiple sources

--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -4,6 +4,10 @@ environment:
   sdk: ^3.6.0
 dependencies: 
   equatable: ^2.0.7
+  rxdart: ^0.28.0
 dev_dependencies:
   test: ^1.28.0
   checks: ^0.3.1
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
+  build_test: ^3.5.5
